# stratigraph

./: .aidevops.json  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  USER_GUIDE.md  charter.yaml  package-lock.json  package.json
.agents/: AGENTS.md  commands
.ctx/: config.toml  graph.db
.github/: dependabot.yml
.github/workflows/: deploy.yml  release.yml
app/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
app/public/: demo_roman_villa.hmatrix.json  sample_contexts.csv  sample_events.csv  sample_observations.csv
app/src/: App.tsx  Workspace.tsx  diagnostics.ts  index.css
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: axum_client.rs  axum_sync.rs  lib.rs  main.rs  mdns_plugin.rs
app/src-tauri/wix/: firewall.wxs
app/tests/: collaboration.playwright.ts
docs/: scope.md
docs/research-papers/: ChatGPT-research-report.md  Digital Archaeology Research Expansion.md  Harris Matrix Generator Research Scope.md  P2P Offline Sync for Archaeology App.md  StratiGraph v2_ Research & Roadmap.md  StratiGraph v3_ Zero-Infrastructure Architecture.md  Stratigraph Paleo Coastline Data Research.md  interoperability_research_synthesis.md
docs/research-prompts/: 01-8_combined.txt  01_harris_matrix_software_review.txt  02_graph_theory_for_stratigraphy.txt  03_archaeological_stratigraphy_standards.txt  (+6 more)
schemas/: context-relationships-v1.json  context-sheet-v1.json
scripts/: screenshots.mjs
(+76 files in other folders)
