[package]
name = "stratigraph"
version = "1.0.2"
description = "A modern, AI-ready Harris Matrix generator for archaeological stratigraphy"
authors = ["Marcus Quinn"]
license = "MIT"
repository = "https://github.com/strati-graph/stratigraph"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "stratigraph_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"
mdns-sd = "0.20.0"
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net"] }
tokio-tungstenite = "0.29.0"
yrs = { version = "0.18" }
uuid = { version = "1.20.0", features = ["v4"] }
futures = "0.3.32"
yrs-axum = "0.8.2"
futures-util = "0.3.32"
tauri-plugin-sql = { version = "~2.0.0", features = ["sqlite"] }
tauri-plugin-stronghold = "2.3.1"
rust-argon2 = "3.0.0"
sha2 = "0.10.9"
